--- a/JS_program_demo/oneSentence/one.html
+++ b/JS_program_demo/oneSentence/one.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="one.css">
 	<title>一言</title>
 </head>
-<body class="rand-colour">
+<body class="rand-color">
 	<div>hhhhhhhhhh</div>
 	<script type="text/javascript" src="one.js"></script>
 </body>
