--- a/JS_program_demo/oneSentence/one.html
+++ b/JS_program_demo/oneSentence/one.html
@@ -2,10 +2,29 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="one.css">
+	<meta charset="utf-8">
 	<title>一言</title>
 </head>
-<body class="rand-color">
-	<div>hhhhhhhhhh</div>
+<body class="app rand-color">
+	<div class="box-quote">
+		box-quote
+		<div class="box-up">
+			box-up.
+			<div class="box-times">
+				box-times
+				<div class="time-month">time-month</div>
+				<div class="time-day">time-day</div>
+			</div>
+		</div>
+		<div class="slogan">life is short, what are we doing?</div>
+		<div class="box-down">
+			box-down
+			<div class="down-words">this is a words</div>
+			<button class="down-button">button</button>
+			<div class="down-people">this is who say the word</div>
+		</div>
+	</div>
 	<script type="text/javascript" src="one.js"></script>
+
 </body>
 </html>
