--- a/JS_program_demo/oneSentence/one.html
+++ b/JS_program_demo/oneSentence/one.html
@@ -19,7 +19,10 @@
 		<div class="slogan">life is short, what are we doing?</div>
 		<div class="box-down">
 			box-down
-			<div class="down-words">this is a words</div>
+			<div class="down-words">
+					<script type="text/javascript" src="https://api.lwl12.com/hitokoto/main/get?encode=js&charset=utf-8"></script>
+					<div id="lwlhitokoto"><script>lwlhitokoto()</script></div>
+			</div>
 			<button class="down-button">button</button>
 			<div class="down-people">this is who say the word</div>
 		</div>
