--- a/JS_program_demo/oneSentence/one.html
+++ b/JS_program_demo/oneSentence/one.html
@@ -7,7 +7,7 @@
 </head>
 <body class="app rand-color">
 	<div class="box-quote">
-		box-quote<a href="http://www.baidu.com">123</a>
+		box-quote <a href="#">6666666666</a>
 		<div class="box-up">
 			box-up.
 			<div class="box-times">
@@ -16,6 +16,7 @@
 				<div class="time-day">time-day</div>
 			</div>
 		</div>
+		
 		<div class="slogan">life is short, what are we doing?</div>
 		<div class="box-down">
 			box-down
@@ -23,6 +24,9 @@
 					<script type="text/javascript" src="https://api.lwl12.com/hitokoto/main/get?encode=js&charset=utf-8"></script>
 					<div id="lwlhitokoto"><script>lwlhitokoto()</script></div>
 			</div>
+			
+
+
 			<button class="down-button">button</button>
 			<div class="down-people">this is who say the word</div>
 		</div>
