--- a/JS_program_demo/oneSentence/index.html
+++ b/JS_program_demo/oneSentence/index.html
@@ -9,7 +9,7 @@
 	<div class="box-quote">
 		box-quote<a href="http://www.baidu.com">123</a>
 		<div class="box-up">
-			box-up.
+			box-up
 			<div class="box-times">
 				box-times
 				<div class="time-month">time-month</div>
