--- a/JS_program_demo/todoList/todo.html
+++ b/JS_program_demo/todoList/todo.html
@@ -13,7 +13,10 @@
 		</div>
 		<div id="id-div-container">
 <!-- 			<div class="todo-cell">
-				<button class="btn btn-alr">完成</button>
+				<button class="btn btn-alr">完成</but.showgit {
+    position: absolute;
+    bottom: 50px;
+}ton>
 				<button class="btn btn-del">删除</button>
 					<ul class="todo-content in-blk in-center">
 						<li class="in-blk task">${todo}</li>
@@ -22,6 +25,8 @@
 			</div>	 -->
 		</div>
 	</div>	
+
+	<div class="showgit"><a href="https://github.com/HxScript/JavaScriptDemo/tree/master/JS_program_demo/todoList">查看本页面的github地址</a></div>
 	<script type="text/javascript" src="todo.js"></script>
 </body>
 </html>
